Fix text align center

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,3 @@
-text-align: center;
+body {
+  text-align: center;
+}
